[gd_scene load_steps=19 format=2]

[ext_resource path="res://scripts/base.gd" type="Script" id=1]
[ext_resource path="res://assets/background/bricks.png" type="Texture" id=2]
[ext_resource path="res://assets/background/curtain.png" type="Texture" id=3]
[ext_resource path="res://scripts/curtain.gd" type="Script" id=4]
[ext_resource path="res://assets/background/curtain_top.png" type="Texture" id=5]
[ext_resource path="res://assets/background/stage.png" type="Texture" id=6]
[ext_resource path="res://assets/background/chair.png" type="Texture" id=7]
[ext_resource path="res://assets/background/foreground shade.png" type="Texture" id=8]
[ext_resource path="res://assets/fonts/Courier New Bold.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://scripts/ending_dialogue.gd" type="Script" id=10]
[ext_resource path="res://assets/music/selecting.ogg" type="AudioStream" id=11]
[ext_resource path="res://assets/music/in_a_loop.ogg" type="AudioStream" id=12]
[ext_resource path="res://assets/sfx/select.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/sfx/sign_appear.wav" type="AudioStream" id=14]
[ext_resource path="res://assets/ui/poem_board.png" type="Texture" id=15]
[ext_resource path="res://assets/fonts/Apple Chancery.ttf" type="DynamicFontData" id=16]

[sub_resource type="DynamicFont" id=1]

size = 30
use_mipmaps = false
use_filter = false
font_data = ExtResource( 9 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 30
use_mipmaps = false
use_filter = false
font_data = ExtResource( 16 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[node name="base" type="Node2D"]

script = ExtResource( 1 )

[node name="bricks" type="Sprite" parent="." index="0"]

position = Vector2( 481, 226 )
z_index = -2
texture = ExtResource( 2 )
_sections_unfolded = [ "Z Index" ]

[node name="curtain_l" type="Sprite" parent="." index="1"]

position = Vector2( 229.988, 197.467 )
texture = ExtResource( 3 )
script = ExtResource( 4 )

[node name="curtain_r" type="Sprite" parent="." index="2"]

position = Vector2( 729.425, 196.683 )
texture = ExtResource( 3 )
script = ExtResource( 4 )

[node name="curtain_top" type="Sprite" parent="." index="3"]

texture = ExtResource( 5 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="stage" type="Sprite" parent="." index="4"]

position = Vector2( 480, 432 )
texture = ExtResource( 6 )

[node name="chair_1" type="Sprite" parent="." index="5"]

position = Vector2( 121, 520 )
z_index = 1
texture = ExtResource( 7 )
_sections_unfolded = [ "Z Index" ]

[node name="chair_2" type="Sprite" parent="." index="6"]

position = Vector2( 361, 520 )
z_index = 1
texture = ExtResource( 7 )
_sections_unfolded = [ "Z Index" ]

[node name="chair_3" type="Sprite" parent="." index="7"]

position = Vector2( 600.292, 520 )
z_index = 1
texture = ExtResource( 7 )
_sections_unfolded = [ "Z Index" ]

[node name="chair_4" type="Sprite" parent="." index="8"]

position = Vector2( 840.102, 519.963 )
z_index = 1
texture = ExtResource( 7 )
_sections_unfolded = [ "Z Index" ]

[node name="foreground_shade" type="Sprite" parent="." index="9"]

position = Vector2( 479.497, 524.839 )
z_index = 1
texture = ExtResource( 8 )
_sections_unfolded = [ "Z Index" ]

[node name="dialogue_canvas" type="CanvasLayer" parent="." index="10"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="dialogue_box" type="RichTextLabel" parent="dialogue_canvas" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 18.0
margin_top = 514.0
margin_right = 941.0
margin_bottom = 625.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = ""
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
script = ExtResource( 10 )
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Material", "Mouse", "Rect", "Visibility", "custom_colors", "custom_fonts" ]

[node name="music_selecting" type="AudioStreamPlayer" parent="." index="11"]

stream = ExtResource( 11 )
volume_db = -5.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="music_show" type="AudioStreamPlayer" parent="." index="12"]

stream = ExtResource( 12 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="select_sound" type="AudioStreamPlayer2D" parent="." index="13"]

stream = ExtResource( 13 )
volume_db = 5.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="sign_sound" type="AudioStreamPlayer2D" parent="." index="14"]

stream = ExtResource( 14 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="poem_board" type="Sprite" parent="." index="15"]

position = Vector2( 474.305, 96.0698 )
z_index = -1
texture = ExtResource( 15 )
_sections_unfolded = [ "Z Index" ]

[node name="poem_text" type="RichTextLabel" parent="poem_board" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -366.0
margin_top = -33.0
margin_right = 364.0
margin_bottom = 43.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]Citizen A liked coffee[/center]"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Citizen A liked coffee"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "Mouse", "custom_colors", "custom_fonts" ]


